--- a/templates/index.html
+++ b/templates/index.html
@@ -28,9 +28,6 @@
 
     {{ moment.include_jquery() }}
     {{ moment.include_moment() }}
-{#    {{ campus.js }}#}
-
-
 
 </head>
 <body>
@@ -52,11 +49,9 @@
 <div class="container" style="margin-top:10px; background-color: rgb(118, 118, 118);">
     <div class="row">
         <div class="col-sm-8" style="padding-top:70px">
-{#            {{ campus.html }}#}
             {{googlemap("simple-map", 33.6461,
              -117.8427,
               style="height:500px;width:500;margin:0;border-radius:25px;",
-               zoom=17,
                     markers=[
                     {
                     'icon': "http://maps.google.com/mapfiles/ms/icons/blue-dot.png",
@@ -66,9 +61,18 @@
                     "<style='color: rgb(118, 118, 118)></style>"
                     "<img src='../static/marker.png' style='width:70px;' />"
                     "<br>"
-                    "<b style='color:rgb(128, 255, 245);'>Board Lock </b>")
-
-            }]
+                    "<b style='color:rgb(118, 118, 118);'>Board Lock </b>")
+                    },{
+                    'icon': "http://maps.google.com/mapfiles/ms/icons/blue-dot.png",
+                    'lat': 33.6461,
+                    'lng': -117.8427 ,
+                    'infobox': (
+                    "<style='color: rgb(118, 118, 118)></style>"
+                    "<img src='../static/UCI.gif' style='width:70px;' />"
+                    )}
+                    ],
+                    fit_markers_to_bounds=True,
+                    zoom=13
             )}}
         </div>
         <div class="col-sm-4" style="padding-left: 60px;padding-right: 0;">
@@ -98,60 +102,11 @@
 
 </body>
 <script src="{{ url_for('bower.static', filename='radial-progress-chart/dist/radial-progress-chart.js') }}"></script>
-{#<script type="text/javascript">#}
-{#var progress = new RadialProgressChart('.progress', {#}
-{#    diameter: 200,#}
-{#    series: [{#}
-{#        labelStart: '\uF105',#}
-{#        value: 0,#}
-{#        color: {#}
-{#            linearGradient: {#}
-{#                x1: '0%',#}
-{#                y1: '100%',#}
-{#                x2: '50%',#}
-{#                y2: '0%',#}
-{#                spreadMethod: 'pad'#}
-{#            },#}
-{#            stops: [{#}
-{#                offset: '0%',#}
-{#                'stop-color': '#ffff00',#}
-{#                'stop-opacity': 1#}
-{#            }, {#}
-{#                offset: '100%',#}
-{#                'stop-color': '#ff0000',#}
-{#                'stop-opacity': 1#}
-{#            }]#}
-{#        }#}
-{#    }],#}
-{#    center: function(p) {#}
-{#        return p + ' %'#}
-{#    }#}
-{#});#}
-{##}
-{#function getRandom(min, max) {#}
-{#    return Math.random() * (max - min) + min;#}
-{#}#}
-{##}
-{#function loop(p) {#}
-{#    if (p > 100) {#}
-{#        setTimeout(function() {#}
-{#            loop(0)#}
-{#        }, 3000)#}
-{#    } else {#}
-{#        progress.update(p);#}
-{#        setTimeout(function() {#}
-{#            loop(p + 1)#}
-{#        }, 90)#}
-{#    }#}
-{#}#}
-{##}
-{#loop(10);#}
-{#</script>#}
 
 <script type="text/javascript">
 var calories = new RadialProgressChart('.calories', {
     diameter: 200,
-    max: 800,
+    max: 1000,
     round: true,
     series: [{
         labelStart: '\uF105',
@@ -178,7 +133,7 @@ var calories = new RadialProgressChart('.calories', {
     center: {
         content: [function(value) {
             return value
-        }, ' OF 800 CALS'],
+        }, ' OF 1000 CALS'],
         y: 25
     }
 });
@@ -203,12 +158,20 @@ var distance = new RadialProgressChart('.distance', {
     max: 20,
     round: false,
     series: [{
-        value: {{ distance }},
+        value: {{ total_distance }},
         color: ['red', '#7CFC00']
     }],
     center: function(d) {
         return d.toFixed(1) + ' Miles'
     }
+
+{#    (function loop() {#}
+{#  calories.update(Math.round(getRandom(50, 800)));#}
+{#  gpa.update(getRandom(0.5, 3.8));#}
+{#  setTimeout(loop, 3000);#}
+{# {})()#}
+
+
 });
 
 </script>
